[gd_scene load_steps=3 format=2]

[ext_resource path="res://Textures/puzzle_createsquare/square_piece.png" type="Texture" id=1]
[ext_resource path="res://Scripts/puzzles/puzzle_createsquare/square_piece.gd" type="Script" id=2]

[node name="square_piece" type="Node2D"]
position = Vector2( 137, 68 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 0, 32 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, 32 )
polygon = PoolVector2Array( -0.206696, 0.0249176, -32.4775, -31.6846, 32.0274, -31.8272 )

[node name="Tween" type="Tween" parent="."]

[node name="click_timer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="click_timer" to="." method="_on_click_timer_timeout"]
